<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<name>Knowledge Engine</name>
	<groupId>eu.knowledge.engine</groupId>
	<artifactId>ke-parent</artifactId>
	<packaging>pom</packaging>
	<version>${revision}</version>
	<description>This artifact is a suite of tools for orchestrating semantic data exchange through a knowledge network.</description>

	<modules>
		<module>smart-connector</module>
		<module>admin-ui</module>
		<module>examples/java-api</module>
		<module>knowledge-directory</module>
		<module>smart-connector-rest-server</module>
		<module>smart-connector-api</module>
		<module>smart-connector-rest-dist</module>
		<module>reasoner</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.2.2</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>gitlab-maven</id>
			<url>https://gitlab.inesctec.pt/api/v4/projects/2878/packages/maven</url>
		</repository>
	</repositories>
	<distributionManagement>
		<repository>
			<id>gitlab-maven</id>
			<url>https://gitlab.inesctec.pt/api/v4/projects/2878/packages/maven</url>
		</repository>
		<snapshotRepository>
			<id>gitlab-maven</id>
			<url>https://gitlab.inesctec.pt/api/v4/projects/2878/packages/maven</url>
		</snapshotRepository>
	</distributionManagement>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<revision>1.2.5-SNAPSHOT</revision>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.jena</groupId>
				<artifactId>apache-jena-libs</artifactId>
				<version>4.10.0</version>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
